fix  responsive layout bugs

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -3,7 +3,8 @@ $player-font: 'Rambla',
 sans-serif;
 
 ///// BREAKPOINTS /////
-$bp: 63em;
+$bp: 30em;
+$bp-height: 56em;
 
 ///// BASE /////
 * {
@@ -13,11 +14,14 @@ $bp: 63em;
 }
 
 html {
-  font-size: 62.5%;
-
+   font-size: 62.5%;
   @media only screen and (orientation:portrait) and (max-width: $bp) {
-    font-size: 150%;
+   font-size: 55%;
   }
+  @media only screen and (orientation:landscape) and (max-height: $bp-height ) {
+
+    font-size: 40%;
+   }
 }
 
 body {
@@ -31,25 +35,21 @@ body {
 .player {
 
   background: url(https://res.cloudinary.com/igorwys/image/upload/v1559038484/WidgetPlayer/background_z8a223.jpg) center / cover no-repeat;
-  padding: 6rem 2.5rem;
-
-  @media only screen and (max-width: $bp) {
-    padding: 3rem 1rem;
-  }
-
+  height: 100vh;
+  display: flex;
+  align-items: center;
   perspective: 1000px;
+
+
 
   &-container {
     width: 100%;
     height: 100%;
     border-radius: 30px;
-    // background-color: #f3f4f8;
     box-shadow: 0px 6rem 3rem -3rem rgba(0, 0, 0, 0.4),
-      0px -2rem 1rem -1rem rgba(0, 0, 0, 0.2);
+                0px -2rem 1rem -1rem rgba(0, 0, 0, 0.2);
     position: absolute;
     overflow: hidden;
-
-
     background-color: transparent;
 
     &-top {
@@ -210,8 +210,6 @@ input[type='range']::-moz-range-thumb {
   width: 2.3rem;
   border: 0;
 }
-
-
 
 
 /////  ICON BOTTOM /////
